--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Brothers and sisters -- Fiction'
 - !lcsh 'Inheritance and succession -- Fiction'
+- GITenberg
 title: 'A Woman''s Burden: A Novel'
 url: http://www.gutenberg.org/ebooks/35240
